# ext-py-demography

./: README.md  datawrangler.py  demography.parquet  demography.py  glootil.py  justfile  pyproject.toml  queries.py
