[project]
name = "ext-py-demography"
version = "0.1.0"
description = "Gloodata demography extension (python)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.1.2",
    "fastapi>=0.115.4",
    "pydantic>=2.9.2",
    "uvicorn>=0.32.0",
]

[dependency-groups]
dev = [
    "ruff-lsp>=0.0.58",
]
